# aux-exchange

./: .firebaserc  .gitignore  CONTRIBUTING.md  Cargo.toml  Deployment.md  LICENSE  Quickstart.md  README.md  apollo.config.js  aux-da.ipynb  firebase.json  go.mod  go.sum
aptos/: Cargo.toml
aptos-relayer/aptos/: Makefile  Move.toml
aptos-relayer/aptos/sources/: authority.move  native_swap.move  redeem_with_native_swap.move  relay.move
aptos-relayer/ethereum/: .gitignore  Makefile  README.md  TODO.md  foundry.toml  package.json  remappings.txt  testing.env
aptos-relayer/ethereum/forge-scripts/: attest_token_test.sol  deploy_contracts.sol  deploy_contracts_test.sol  send_token_transfer_test.sol
aptos-relayer/ethereum/modules/: README.md
aptos-relayer/ethereum/shell-scripts/: run_integration_tests.sh
aptos-relayer/ethereum/ts-test/: 00_wormhole.ts
aptos-relayer/relayer/: Dockerfile  README.md  package-lock.json  package.json
aptos-relayer/relayer/src/: consts.ts  main.ts
aptos/abort-only-contract/: deployer  redeploy-aux
aptos/abort-only-contract/aux/: Move.toml  README.md
aptos/api/aux-ts/: .dockerignore  .gitignore  .pnp.cjs  Dockerfile  README.md  buildspec.yml  codegen.ts  config.yaml  docker-compose.yml  graphql.schema.json  package.json  tsconfig.json
aptos/api/aux-ts/src/indexer/: .gitignore  BTC-USD_1d_EXAMPLE.json  README.md  analytics.ts  backfill.py  backfill.ts  coinbase.py  dedupe.ts  index.ts  main.ts  pyproject.toml
aptos/api/aux-ts/src/indexer/data/: BTC-USDT_15m.json  BTC-USDT_15s.json  BTC-USDT_1d.json  BTC-USDT_1h.json  BTC-USDT_1m.json  BTC-USDT_1w.json  BTC-USDT_4h.json  BTC-USDT_5m.json  BTC-USD_15m.json  BTC-USD_15s.json  BTC-USD_1d.json  BTC-USD_1h.json  BTC-USD_1m.json  BTC-USD_1w.json  BTC-USD_4h.json  BTC-USD_5m.json  ETH-USDT_15m.json  ETH-USDT_15s.json  ETH-USDT_1d.json  ETH-USDT_1h.json  ETH-USDT_1m.json  ETH-USDT_1w.json  ETH-USDT_4h.json  ETH-USDT_5m.json  ETH-USD_15m.json  ETH-USD_15s.json  ETH-USD_1d.json  ETH-USD_1h.json  ETH-USD_1m.json  ETH-USD_1w.json  ETH-USD_4h.json  ETH-USD_5m.json  SOL-USDT_15m.json  SOL-USDT_15s.json  SOL-USDT_1d.json  SOL-USDT_1h.json  SOL-USDT_1m.json  SOL-USDT_1w.json  SOL-USDT_4h.json  SOL-USDT_5m.json  (+9 more)
aptos/contract/: const_product_helper.py
aptos/contract/aux/: .eslintrc.cjs  Move.toml  dump.rdb
aptos/contract/deployer/: Cargo.toml  Move.toml  README.md
aptos/contract/deployer/sources/: deployer.move
aptos/contract/deployer/src/: lib.rs
aptos/contract/redeploy-aux/: Move.toml
aptos/contract/util-for-aptos/: Cargo.toml
aptos/contract/util-for-aptos/src/: lib.rs
aptos/go-util/: generate.go  tools.go
aptos/simple-ui/: README.md  angular.json  package-lock.json  package.json
aptos/simple-ui/components/: aux_icon.tsx  layout.tsx  link.tsx  pool_listing.tsx  pool_view.tsx  swap.tsx
aptos/simple-ui/lib/: basic.ts  dataservice.ts  network-config.ts  pool.ts  theme.ts
aptos/simple-ui/pages/: _app.tsx  index.tsx  pool.tsx
aptos/simple-ui/src/: index.html
aptos/testing/: _base.sh  replay_sim.sh  run.sh  test.sh
aptos/testing/base-container/: Containerfile  _example_amm.sh  _example_clob.sh  _setup.sh  _test.sh
aptos/testing/test-container/: Containerfile
docs/: concentrated-liquidity-amm.MD  derivative-risk-management.MD  stable-swap.MD
docs/concliq/: log_2.go  log_2_test.go  tick.go  tick_test.go
docs/concliq/gen-math/: concliq_math.move.template  main.go
docs/concliq/verifier/: main.go
docs/stableswap/: gendata.go  perm.go  reference.go  reference_test.go  three_coin_test_cases.go  two_coin_test_cases.go
docs/stableswap/gen-move-test/: main.go  math_2pool_test.move.template  math_3pool_test.move.template
docs/stableswap/gen-pool/: main.go  math_pool.move.template  quoter_pool.move.template  router_pool.move.template  stable_pool.move.template
docs/stableswap/gen-pool-math/: main.go  math_pool.move.template
firebase/: firestore.rules
firebase/functions/: README.md  copy-pool-stat-to-storage.go  create.sh  go.mod  go.sum
firebase/hosting/: deploy-swap-trading.sh  deploy.sh
firebase/hosting/landing-page/: index.html
firebase/hosting/swap-trading/: 404.html  README.md  clean-swap-trading.sh  config.js  go.mod  index.html  serve.go
firebase/run/pool-stat/: README.md  build.sh  go.mod  go.sum  load_events.go  main.go  or-panic.go  pools.go  write-firestore.go  write-table.go
firebase/storage/: cors.json  update-cors.sh
go-util/: generate.go  tools.go
go-util/aptos/: account.go  account_request.go  account_test.go  address.go  address_test.go  addresses.go  aptos_rest.go  aptos_types.go  aux_clob_market.go  aux_entry_functions.go  aux_fakecoins.go  aux_types.go  auxfakecoin_string.go  bcs.go  client.go  config.go  config_test.go  faucet.go  full_node_config.go  full_node_config_test.go  general_request.go  json_uint64.go  mnemonic.go  mnemonic_test.go  move_type_tag.go  network.go  transaction_options.go  transactions.go  transactions_request.go  transactions_request_example_test.go  transactions_request_test.go  types_test.go
go-util/aptos/cmd/: .gitignore  calculate-resource-address.go  check-aptos-version.go  cmd.go  config-file.go  deploy.go  key-and-mnemonic.go  launch-aptos-node.go  ls-account.go  ls-all-orders.go  ls-chain.go  ls-l2-market.go  ls-market.go  ls-pool.go  overwrite-config.go  place-clob-order.go  root.go  run-validator.go  setup-aux.go  util.go
go-util/aptos/known/: README.md  coins.go  coins.json
go-util/cmd/mirror-coinbase/: cmd.go
go-util/cmd/move-abort/: cmd.go
indexer/: Cargo.toml  README.md  docker-compose.yml  main.py  pyproject.toml  research.ipynb  research.py
indexer/src/: ddl.sql  main.rs
sui/: .gitignore
sui/api/: Cargo.toml  apollo.config.js  readme_schema.graphql  schema.graphql
sui/api/src/: client.rs  lib.rs  main.rs  schema.rs  server.rs
sui/api/tests/: integration_test.rs  test_client.rs  test_graphql.rs
sui/contract/: Move.toml
sui/contract/sources/: aux_coin.move  (+12 more)
sui/indexer/: Cargo.toml  docker-compose.yml  pyproject.toml  research.ipynb  research.py
sui/indexer/src/: main.rs
(+465 files in other folders)
