[tool.poetry]
name = "indexer"
version = "0.1.0"
description = ""
authors = ["Charles Li <charles.dt.li@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dask = {extras = ["dataframe"], version = "^2022.6.0"}
SQLAlchemy = "^1.4.37"
psycopg2 = "^2.9.3"
pandas = "^1.4.2"
confluent-kafka = "^1.9.2"
clickhouse-driver = "^0.2.4"

[tool.poetry.dev-dependencies]
ipykernel = "^6.17.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
