[package]
name = "aux-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "5.0.2"
async-graphql-axum = "5.0.2"
axum = "0.6.1"
color-eyre = "0.6.2"
dirs = "4.0.0"
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["full"] }
nom = "7.1.1"
serde = "1.0.148"
serde_json = "1.0.89"
sui-json-rpc = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
sui-types = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.2"
