[package]
name = "sui-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
url = "2"

# tokio
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.2"

# db
clickhouse-rs = "1.0.0-alpha.1"
rdkafka = { version = "0.28", features = ["cmake-build"] }
redis = { version = "0.21", features = ["tokio-comp"] }
timely = "0.12"
