[package]
name = "deployer"
version = "0.1.0"
edition = "2021"

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "aptos-cli-v0.3.9" }
framework = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "aptos-cli-v0.3.9" }
cached-packages = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "aptos-cli-v0.3.9" }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
hex = "0.4.3"
bcs = "0.1.3"
serde = "1.0.137"
serde_json = "1.0.81"
clap = { version = "3.2.20", features = ["derive"] }

util_for_aptos = { path = "../util-for-aptos" }

[[bin]]
name = "create-resource-account"
path = "src/bin/create-resource-account.rs"

[[bin]]
name = "publish-to-resource-account"
path = "src/bin/publish-to-resource-account.rs"

[[bin]]
name = "create-resource-account-and-publish"
path = "src/bin/create-resource-account-and-publish.rs"

[[bin]]
name = "republish-to-resource-account"
path = "src/bin/republish-to-resource-account.rs"
