[package]
name = "util_for_aptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "0377a5f9825110c63b741b0a6d735ff6b4f945b7" }
aptos-framework = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "0377a5f9825110c63b741b0a6d735ff6b4f945b7" }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
hex = "0.4.3"
bcs = "0.1.3"
serde = "1.0.137"
serde_json = "1.0.81"
